[gd_scene load_steps=10 format=2]

[ext_resource path="res://Sprites/DPG_logo_clipped.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Buttons/MM_Button.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/MainMenu/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Credits/Credits.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Settings/Settings.tscn" type="PackedScene" id=5]
[ext_resource path="res://Sprites/Map/map_blurred.png" type="Texture" id=7]
[ext_resource path="res://Scenes/Buttons/LanguageButtonGroup.tscn" type="PackedScene" id=8]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="ButtonGroup" id=2]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.560784, 0.827451, 1, 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MapBlurred" type="TextureRect" parent="CenterContainer"]
margin_right = 640.0
margin_bottom = 640.0
texture = ExtResource( 7 )

[node name="Control" type="Control" parent="CenterContainer"]
margin_right = 640.0
margin_bottom = 640.0
rect_min_size = Vector2( 640, 640 )

[node name="DpgLogo2" type="TextureRect" parent="CenterContainer/Control"]
margin_top = 64.0
margin_right = 640.0
margin_bottom = 314.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="Start_Button" parent="CenterContainer/Control" instance=ExtResource( 2 )]
margin_left = 153.0
margin_top = 300.0
margin_right = 488.0
margin_bottom = 368.0
custom_styles/focus = SubResource( 1 )
buttonText = "START"

[node name="Settings_Button" parent="CenterContainer/Control" instance=ExtResource( 2 )]
margin_left = 153.0
margin_top = 390.0
margin_right = 488.0
margin_bottom = 458.0
custom_styles/focus = SubResource( 1 )
buttonText = "SETTINGS"

[node name="Credits_Button" parent="CenterContainer/Control" instance=ExtResource( 2 )]
margin_left = 153.0
margin_top = 480.0
margin_right = 488.0
margin_bottom = 548.0
custom_styles/focus = SubResource( 1 )
buttonText = "CREDITS"

[node name="LanguageRadio" parent="CenterContainer/Control" instance=ExtResource( 8 )]
margin_left = 320.0
margin_top = 577.0
margin_right = 320.0
margin_bottom = 620.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1
group = SubResource( 2 )

[node name="Credits" parent="CenterContainer/Control" instance=ExtResource( 4 )]
visible = false

[node name="Settings" parent="CenterContainer/Control" instance=ExtResource( 5 )]
visible = false

[connection signal="buttonPressed" from="CenterContainer/Control/Settings_Button" to="." method="_on_Settings_Button_buttonPressed"]
[connection signal="buttonPressed" from="CenterContainer/Control/Credits_Button" to="." method="_on_Credits_Button_buttonPressed"]
